--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "manage-landing-page-master",
   "version": "1.0.0",
   "description": "![Design preview for the Manage landing page coding challenge](./design/desktop-preview.jpg)",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "build": "tailwindcss -i ./input.css -o ./css/main.css ./index.html",
+    "build": "tailwindcss -i ./input.css -o ./css/main.css",
     "watch": "tailwindcss -i ./input.css -o ./css/main.css --watch"
   },
   "keywords": [],
